syntax = "proto3";
package bringyour;

option go_package = "bringyour.com/protocol";



message ExtenderHeader {
// FIXME this should be a signature not the secret to avoid revealing the secret
    string Secret = 1;
    string DestinationHost = 2;
    uint32 DestinationPort = 3;
}

